components/main/Styles.module.css
.grid {
    display: flex;
    height: 100vh;
    padding: 10px;
    width: 100vw;
}

.twoSectionsLayout {
    flex-grow: 0;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: 1fr;
    grid-column-gap: 10px;
    grid-row-gap: 10px;
    justify-items: stretch;
}

.common {
    overflow: scroll;
    height: 97vh;
}

.div1 {
    grid-area: 1 / 1 / 2 / 2;
    composes: common;
}
.div2 {
    grid-area: 1 / 2 / 2 / 3;
    composes: common;
}

.menu {
    position: absolute;
    top: 20px;
    left: 90px;
    z-index: 1;
    display: flex;
    flex-direction: column;
    line-height: 0.75;
}

.themeMenu {
    width: 350px;
}

.menu:focus {
    outline: none;
}

.nav {
    flex-shrink: 0;
    width: 70px;
    margin-right: 10px;
    display: flex;
    justify-content: center;
    padding: 5px;
    composes: common;
}

.navButtonsContainer {
    height: auto;
    z-index: 2;
}

@media (min-height: 600px) {
    .reactMenuButton {
        font-size: 35px !important; /* Temporary hack for now*/
    }
}

@media (max-width: 850px) {
    .grid {
        display: grid;
        grid-template-columns: 1fr;
        grid-template-rows: auto;
        min-height: 100vh;
        width: 100vw;
    }

    .nav {
        height: 70px;
        width: calc(100vw - 20px);
        padding: 0px;
        grid-area: 1 / 1 / 2 / 2;
        z-index: 2;
    }

    .main {
        margin-top: 10px;
        grid-area: 2 / 1 / 3 / 2;
        width: calc(100vw - 20px);
    }

    .twoSectionsLayout {
        display: flex;
        flex-direction: row;
        align-items: stretch;
        justify-content: stretch;
        flex-wrap: wrap;
        width: 100%;
    }

    .div0 {
        margin-bottom: 10px;
        width: 100vw;
        height: auto;
    }

    .div2 {
        composes: div0;
    }

    .div1 {
        composes: div0;
    }

    .navButtonsContainer {
        display: flex;
        align-items: center;
    }

    .menu {
        left: 0px;
        top: 80px;
        padding: 10px;
        z-index: 1;
        composes: div0;
    }

    .themeMenu {
        width: 95%;
        align-self: center;
    }
}

